# adventofcode

./: .gitignore  CMakeLists.txt  README.md  day1.cc  day10.cc  day11.cc  day11_common.cc  day11_common.h  day11_part2.cc  day12.cc  day1_part2.cc  day2.cc  day2_common.cc  day2_common.h  day2_part2.cc  day3.cc  day4.cc  day4_common.cc  day4_common.h  day4_part2.cc  day5.cc  day6.cc  day7.cc  day8.cc  day9.cc
2020/: CMakeLists.txt
2020/day1/: day1.cc  day1.h  main.cc  main_part2.cc  test.cc
2020/day10/: day10.cc  test.cc
2020/day11/: main.cc  main_part2.cc
2020/day12/: day12.cc  day12.h  main.cc
2020/day13/: day13.cc  main.cc
2020/day14/: main_part2.cc  test.cc
2020/day15/: day15.cc  test.cc
2020/day16/: day16.h  main.cc  test.cc
2020/day17/: day17.cc  day17.h  main.cc  test.cc
2020/day18/: day18.h
2020/day19/: day19.cc  main.cc  test.cc
2020/day2/: day2.cc  main.cc  test.cc
2020/day20/: day20.cc  main.cc  test.cc
2020/day22/: day22.cc  day22.h  main.cc
2020/day23/: day23.h  main.cc
2020/day24/: day24.cc  main.cc
2020/day25/: day25.h  test.cc
2020/day3/: day3.cc  main.cc  test.cc
2020/day4/: day4.cc  main_part2.cc  test.cc
2020/day5/: day5.cc  day5.h  main.cc
2020/day7/: day7.cc  day7.h  test.cc
2020/day8/: day8.h
2020/day9/: day9.cc  main.cc
2020/input/: day15.in
2024/day1/src/: main.rs
2024/day2/src/: main.rs
2024/day3/src/: main.rs
2024/day4/src/: main.rs
2024/day5/src/: main.rs
2024/day6/src/: main.rs
2024/day7/: rustfmt.toml
2024/day7/src/: main.rs
2024/day8/src/: main.rs
common/: test.h
day1/: day1.cc  day1_part2.cc
day10/: day10.h  main.cc
day11/: day11.cc  day11.h  day11_common.cc  day11_common.h  day11_part2.cc  test.cc
day12/: test.cc
day13/: day13.h  test.cc
day14/: day14.cc  day14.h  main.cc
day15/: day15.h  main.cc  test.cc
day16/: day16.cc
day18/: day18.cc  main.cc  test.cc
day19/: day19.h
day2/: day2.cc  day2.h  day2_common.cc  day2_part2.cc  main_part2.cc
day20/: day20.h
day21/: day21.cc  day21.h  main.cc  test.cc
day22/: day22.cc  test.cc
day23/: day23.cc  test.cc
day24/: day24.cc  day24.h  test.cc
day25/: day25.cc  main.cc  test.cc
day3/: day3.h
day4/: day4.cc  day4.h  day4_common.cc  day4_common.h  day4_part2.cc  main.cc
day5/: test.cc
day6/: day6.cc  day6.h  main.cc  test.cc
day7/: main.cc
day8/: day8.cc  main.cc  test.cc
day9/: day9.h  test.cc
